<?xml version="1.0"?>
<package>
  <name>tf_splitter</name>
  <version>0.0.1</version>
  <description>This package decomposes tf into multiple ones according to the number of robots.</description>
  
  <maintainer email="yz@ai.univ-paris8.fr">Zhi Yan</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://www.ai.univ-paris8.fr/~yz</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
